--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
  <div class="nav-mobile">
         <ul>
             <li onclick="openslide()">
-                    <a href="#" class="home__link">menu</a>
+                    <a href="#" class="home__link"><i class="fas fa-bars"></i></a>
                  </li>
                  <li>
-                    <a href="#" class="home__link" >cart</a>
+                    <a href="#" class="home__link" ><i class="fas fa-cart-plus"></i></a>
                  </li>
         
         </ul>
@@ -62,10 +62,10 @@
                     <a href="#" class="home__link">ENJOY</a>
                  </li>
                  <li>
-                     <a href="" class="home__link">JOURNAL</a>
+                     <a href="#" class="home__link">JOURNAL</a>
                  </li>
                  <li>
-                     <a href="" class="home__link">ABOUT US</a>
+                     <a href="#" class="home__link">ABOUT US</a>
                  </li>
             </ul>
  </div>         
@@ -423,7 +423,8 @@
 
 
 
-      <script src="js/scrollreveal.min.js"></script>
+    <script src="https://kit.fontawesome.com/f1882e6330.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
       <script src="js/bootstrap.js"></script>
       <script src="index.js"></script>
 </body>
